--- a/Introduction to Google Cloud Platform and TensorFlow.ipynb
+++ b/Introduction to Google Cloud Platform and TensorFlow.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "This tutorial will introduce you to Google Cloud Compute Engine and TensorFlow. We will go through the basics of tensorflow and implement linear regression, classification and neural networks in tensorflow and run them on Google standalone compute engine. Then, we will submit our model to google cloud which can handle large amounts of data and computational requirement. Often times, Companies buy cloud resources from Goolge or AWS for their Data Science infrastucture instead of buying on-the-premise hardware. We will know how they implement their ML projects using google cloud.\n",
     "\n",
-    "Note: This tutorial assumes that you know about linear regression, classification and mnist digit classification."
+    "Note: This tutorial assumes that you know about linear regression, classification and mnist digit classification.This tutorial has been run on GCP and it might not work on local computer or AWS. It requires tensorflow installed and connectivity to the GCP disk storage. It is advisable to run this notebook on GCP and not on any other platforms."
    ]
   },
   {
@@ -26,6 +26,8 @@
    },
    "outputs": [],
    "source": [
+    "#This cell has been put to support the hosting of images on jupyter notebook from github\n",
+    "\n",
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML"
    ]
@@ -44,16 +46,23 @@
     "\n",
     "We will cover the following topics in this tutorial:\n",
     "\n",
-    "    Setting up the Google Cloud Platform Account\n",
-    "    Starting the Compute Engine VM \n",
-    "    Connecting to Datalab\n",
-    "    Basics of Tensorflow\n",
-    "    Linear Regression \n",
-    "    Classification\n",
-    "    Neural Networks\n",
-    "    Scaling up ML using Cloud ML Engine\n",
+    "   [Setting up the Google Cloud Platform Account](#Setting-up-the-Google-Cloud-Platform-Account---Free-Trial)\n",
     "\n",
-    "    \n",
+    "   [Starting the Compute Engine VM](#Starting-the-Compute-Engine-VM)\n",
+    "\n",
+    "   [Connecting to Datalab](#Connecting-to-Datalab)\n",
+    "\n",
+    "   [Basics of Tensorflow](#Basics-of-Tensorflow)\n",
+    "\n",
+    "   [Linear Regression](#Linear-Regression)\n",
+    "\n",
+    "   [Classification](#Classification)\n",
+    "\n",
+    "   [Neural Networks](#Neural-Networks)\n",
+    "\n",
+    "   [Scaling up ML using Cloud ML Engine](#Scaling-up-ML-using-Cloud-ML-Engine)\n",
+    "\n",
+    "   [References](#References:)\n",
     "\n"
    ]
   },
@@ -72,64 +81,7 @@
     "\n",
     "After successfull setup, You should get a GCP homepage like this:\n",
     "\n",
-    "<img src=\"gcp_home.png\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"https://www.dropbox.com/s/bji2ko0lm24xvfi/gcp_home.PNG\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Image(url= \"https://www.dropbox.com/s/bji2ko0lm24xvfi/gcp_home.PNG\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image of Yaktocat](https://drive.google.com/file/d/1B39CoWF1J8NP5VhXxHx8ds9yg94edcEL/view?usp=sharing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "960ea1f31f6a4d18935e72a2c0f2d488",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "from ipywidgets import Image\n",
-    "\n",
-    "Image(value=requests.get('https://drive.google.com/file/d/1B39CoWF1J8NP5VhXxHx8ds9yg94edcEL/view?usp=sharing').content)"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/gcp_home.PNG)"
    ]
   },
   {
@@ -144,7 +96,7 @@
     "\n",
     "HomePage -> Options -> Compute -> Compute Engine -> VM Instance -> Create new instance \n",
     "\n",
-    "<img src=\"vm.png\">\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/vm.PNG)\n",
     "\n",
     "Note: Before creating any instance, please make sure whether the selected features of the product(or instance) are within the free trial limits or not. Google cloud will prompt you when you try to activate billable services but be careful.\n"
    ]
@@ -167,7 +119,7 @@
     "\n",
     "This step will take about 3-5 minutes to start. Follow the prompts during this process. If you are not yet familiar with Datalab, follow this:\n",
     "\n",
-    "<img src=\"datalab.png\">\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/datalab.PNG)\n",
     "\n",
     "For more information: https://codelabs.developers.google.com/codelabs/dataeng-machine-learning/index.html?index=#2 \n",
     "\n",
@@ -178,11 +130,11 @@
     "datalab connect --zone us-east1-b --port 8081 dataengvm\n",
     "Note: this command is not specified in the intial instructions, it took me time to get this command. Hence I am providing it explicitly so that you do not create a VM repeatedly. You need to create a VM only once, and the reuse it whenever you want. Also, dont forget to stop it when you are done with your work.\n",
     "\n",
-    "<img src=\"command.png\">\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/command.PNG)\n",
     "\n",
     "Successful datalab opening in browswer should look like this:\n",
     "\n",
-    "<img src=\"gcd.png\">"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/gcd.PNG)"
    ]
   },
   {
@@ -204,20 +156,10 @@
     "\n",
     "For more info: https://www.tensorflow.org/\n",
     "\n",
-    "Following picture shows the interface of tensorflow:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"1tensorflow.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Following picture shows the interface of tensorflow:\n",
+    "\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/1tensorflow.png)\n",
+    "\n",
     "TensorFlow allows to build data flow graphs and allows us to better apply numerical computation on it in a easier way. Thus, it helps us to build deep neural networks. A deep neural network is neural network having two or more hidden layers. Data is passed in the form of multidimensional arrays which are called Tensors. Within each graph, each node represents mathematical operations and edges of graphs represents tensors. \n",
     "\n",
     "Tensor: n-dimensional array \n",
@@ -226,7 +168,7 @@
     "\n",
     "for example: \n",
     "\n",
-    "<img src=\"graph.png\">\n"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/graph.PNG)\n"
    ]
   },
   {
@@ -292,7 +234,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear regression using Gradient Descent\n",
+    "## Linear Regression \n",
+    "\n",
+    "case 1: Linear regression using Gradient Descent\n",
     "\n",
     "First, we will implement the linear regression in tensorflow using gradient descent optimization.\n",
     "and then we will use the estimator.\n",
@@ -418,7 +362,9 @@
    "source": [
     "## Linear regresison using inbuilt TensorFlow Estimator\n",
     "\n",
-    "Let us see how we can implement different models using the inbuilt estimators. The current example deals with the automobile data where cylinders ,displacement ,\thorsepower, \tweight, \tacceleration are the features ( independent variables) and mpg ( miles per gallon ) is the dependent variable."
+    "Let us see how we can implement different models using the inbuilt estimators. The current example deals with the automobile data where cylinders ,displacement ,\thorsepower, \tweight, \tacceleration are the features ( independent variables) and mpg ( miles per gallon ) is the dependent variable.\n",
+    "\n",
+    "please download the data from https://www.dropbox.com/sh/6i5p29pckqorg0i/AAAAjZ0_7SGSO4kJVLBp4u8ea?dl=0"
    ]
   },
   {
@@ -667,12 +613,12 @@
     "\n",
     "\n",
     "def input_train():\n",
-    "  return (\n",
+    "    return (\n",
     "      train.shuffle(1000).batch(128)\n",
     "      .repeat().make_one_shot_iterator().get_next())\n",
     "\n",
     "def input_test():\n",
-    "  return (test.shuffle(1000).batch(128)\n",
+    "    return (test.shuffle(1000).batch(128)\n",
     "          .make_one_shot_iterator().get_next())\n",
     "\n",
     "feature_columns = [\n",
@@ -760,9 +706,9 @@
     "slno=0\n",
     "pred_y=[]\n",
     "for i in predict_results:\n",
-    "  print(i)\n",
-    "  pred_y.append(i['predictions'][0])\n",
-    "  \n",
+    "    print(i)\n",
+    "    pred_y.append(i['predictions'][0])\n",
+    "\n",
     "from sklearn.metrics import mean_squared_error\n",
     "print(\"\\nRMS error for the test dataset: {:.0f}\".format(mean_squared_error(true_y, np.array(pred_y))))\n",
     "\n"
@@ -917,7 +863,7 @@
     "collapsed": true
    },
    "source": [
-    "## Neural Networks in TensorFlow"
+    "## Neural Networks"
    ]
   },
   {
@@ -926,7 +872,7 @@
    "source": [
     "TensorFlow is essentially a framework for building Deep Learning Neural Networks. Neural neworks are typically organized in layers. Layers are made up of a number of interconnected 'nodes' which contain an 'activation function'. Patterns are presented to the network via the 'input layer', which communicates to one or more 'hidden layers' where the actual processing is done via a system of weighted 'connections'. The hidden layers then link to an 'output layer' where the answer is output as shown in the graphic below.\n",
     "\n",
-    "<img src=\"simple_neural_network_header.jpg\">\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/simple_neural_network_header.jpg)\n",
     "\n",
     "Most ANNs contain some form of 'learning rule' which modifies the weights of the connections according to the input patterns that it is presented with. In a sense, ANNs learn by example as do their biological counterparts; a child learns to recognize dogs from examples of dogs.\n",
     "\n",
@@ -934,7 +880,7 @@
     "\n",
     "With the delta rule, as with other types of backpropagation, 'learning' is a supervised process that occurs with each cycle or 'epoch' (i.e. each time the network is presented with a new input pattern) through a forward activation flow of outputs, and the backwards error propagation of weight adjustments. More simply, when a neural network is initially presented with a pattern it makes a random 'guess' as to what it might be. It then sees how far its answer was from the actual one and makes an appropriate adjustment to its connection weights.\n",
     "\n",
-    "<img src=\"back.png\">"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/back.png)"
    ]
   },
   {
@@ -959,7 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"image.png\">"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/image.png)"
    ]
   },
   {
@@ -1025,6 +971,8 @@
    },
    "outputs": [],
    "source": [
+    "# source: https://github.com/aymericdamien/TensorFlow-Examples\n",
+    "\n",
     "\n",
     "def neural_network_function(x_dict, n_classes, dropout, reuse, is_training):\n",
     "    \n",
@@ -1315,6 +1263,15 @@
     "# Scaling up ML using Cloud ML Engine\n",
     "\n",
     "we will take a previously developed TensorFlow model to predict taxifare rides and package it up so that it can be run in Cloud MLE. For now, we'll run this on a small dataset. The model that was developed is rather simplistic, and therefore, the accuracy of the model is not great either. However, this notebook illustrates how to package up a TensorFlow model to run it within Cloud ML.\n",
+    "\n",
+    "With this knowledge,one can use the Cloud MLE to run heavy loads and complex ML models. Follow the steps carefully as the environmental variables play a key role in submitting the job to the cloud. In short, the steps are:\n",
+    "\n",
+    "1. Setting up the storage bucket\n",
+    "2. Configuring the environmental variables\n",
+    "3. copying the data to cloud\n",
+    "4. Training the model\n",
+    "5. Deploying the model\n",
+    "6. Prediction\n",
     "\n"
    ]
   },
@@ -1327,17 +1284,27 @@
     "Note that: Your project id is the unique string that identifies your project (not the project name). You can find this from the GCP Console dashboard's Home page. Cloud training often involves saving and restoring model files. Therefore, we should create a single-region bucket.\n",
     "\n",
     "Create a bucket as follows:\n",
-    "<img src=\"storage buckets.png\">\n",
+    "GCP Homepage -> Options-> Storage -> Browse -> create a bucket\n",
+    "\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/storage buckets.PNG)\n",
     "\n",
     "\n",
-    "\n",
-    "you can get the training-data-analyst data from https://github.com/GoogleCloudPlatform/training-data-analyst "
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configure all the environmental variables as follows:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -1377,7 +1344,8 @@
    "source": [
     " Submit training job using gcloud\n",
     "\n",
-    "First copy the training data to the cloud. Then, launch a training job."
+    "First copy the training data to the cloud. Then, launch a training job.\n",
+    "you can get the training-data-analyst data from https://github.com/GoogleCloudPlatform/training-data-analyst "
    ]
   },
   {
@@ -1428,8 +1396,15 @@
    "metadata": {},
    "source": [
     "Data can be seen as follows:\n",
-    "<img src=\"data in bucket.png\">\n",
-    "<img src=\"datafull.png\">"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/data in bucket.PNG)\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/datafull.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, submit the training part as a job to the cloud MLE. this step can take 10-20 mins depending on the data and number of epochs of the training. "
    ]
   },
   {
@@ -1491,9 +1466,12 @@
    "source": [
     "### Monitoring Jobs\n",
     "\n",
+    "GCP has provided many dashboards to monitors the jobs, models and almost everything. All the jobs,tasks that you do on GCP are visible on the dahsboards clearly. Each API has got its own dashboard \n",
+    "\n",
+    "\n",
     "The running jobs can be seen on monitoring dashboard as follows:\n",
-    "<img src=\"job.png\">\n",
-    "<img src=\"logs.png\">"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/job.PNG)\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/logs.PNG)"
    ]
   },
   {
@@ -1565,18 +1543,22 @@
    "source": [
     "### ML Models dashboard: \n",
     "\n",
-    "<img src=\"mlmodel.png\">\n",
+    "ML Engine dashboard shows information about the available models and their versions\n",
     "\n",
-    "<img src=\"models2.png\">\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/mlmodel.PNG)\n",
     "\n",
-    "<img src=\"ml models versions.png\">"
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/models2.PNG)\n",
+    "\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/ml models versions.PNG)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prediction"
+    "#### Prediction\n",
+    "\n",
+    "Let us take a sample data record and submit it to cloud. I am writing the sample data record to the test.json file and submitting it to our model in cloud.\n"
    ]
   },
   {
@@ -1620,25 +1602,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Cloud Platform \n",
+    "As you can see, the gcloud ml-engine predict command has given us the output i.e. taxfare ride price for the given input parameters. This can be extended to a test file and we can have the predicted output for the new unseen data.\n",
     "\n",
-    "<img src=\"platform.png\">"
+    "**[IMPORTANT]** \n",
+    "\n",
+    "In conclusion, after building a robust ML model, we submit that model to the cloud MLE and deploy it. Then we can have our test data submitted to the MLE and get the predicted data. The given example is a very basic model with less training data and only one test data point. Since this is a free trial, I did not have much flexibility over running a robust model and giving it a large amount of training data. I hope this basic example gives you an idea of how do you implement typical ML projects using google cloud just like AWS cloud. Also, whatever we have done till now are only limited to single-account GCP, companies can have corporate enterprise level GCP which might provide a lot of flexibility over the processes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "References:\n",
+    "## Conclusion\n",
+    "\n",
+    "When you successfully set up your GCP account and run the given examples, your GCP homepage should look like this:\n",
+    "\n",
+    "It shows all the acitve APIs and active services. It is a central dashboard for your GCP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google Cloud Platform \n",
+    "\n",
+    "![](https://github.com/sathwikcm/pds-tutorial/raw/master/platform.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For further references, please follow the given links below which have a lot of information about GCP. Particularly the coursera course **'Serverless Machine Learning with Tensorflow on Google Cloud Platform'** is very helpful and it has detailed steps about how to setup the GCP account and run the ML models. \n",
+    "\n",
+    "Refer: https://www.coursera.org/learn/serverless-machine-learning-gcp/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References:\n",
+    "\n",
+    "References and Further Resources\n",
     "\n",
     "1. DeveloperCoding http://developercoding.com/tensorflow/\n",
     "2. TensorFlow Examples https://github.com/aymericdamien/TensorFlow-Examples\n",
@@ -1646,6 +1652,13 @@
     "4. Neural Networks and Deep Learning http://neuralnetworksanddeeplearning.com/\n",
     "5. Artificial neural network https://en.wikipedia.org/wiki/Artificial_neural_network\n",
     "6. Google Machine Learning on Google Cloud Platform https://github.com/GoogleCloudPlatform/training-data-analyst\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thank you :) !"
    ]
   }
  ],
